2002-04-15  Michael Meeks  <michael@ximian.com>

	* Version 1.115.0

2002-04-15  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c
	(do_parse): set the replaceEntities flag on the context,
	split out common code.
	(bonobo_ui_node_from_file),
	(bonobo_ui_node_from_string): upd.

	* tests/test-ui-auto.c
	(test_ui_node_parsing, test_xml_roundtrip): impl.

	* bonobo/bonobo-ui-node.c (uiGetEntity): axe,
	unneeded.

	* bonobo/bonobo-ui-util.c
	(bonobo_ui_util_translate_ui): make it more
	efficient and obvious.

2002-04-12  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-control.c
	(bonobo_control_get_remote_ui_container): set
	ui_container to NIL on exception.

2002-04-14  Murray Cumming  <murrayc@usa.net>

	* bonobo/bonobo-dock-band.c: bonobo_dock_band_new() is now
	just a convenience wrapper for g_object_new(), now that
	the widget_queue_resize() call is in the instance_init() function.

2002-04-13  Anders Carlsson  <andersca@gnu.org>

	* bonobo/bonobo-dock-item.c (bonobo_widget_clobber_focus): Also 
	reverse the focus list on GTK_DIR_LEFT.

2002-03-29  Jody Goldberg <jody@gnome.org>

	* bonobo/bonobo-ui-main.c (gdk_x_error) : replace with
	  gdk_x_error_func so that gdb does not get confused.

2002-04-11  Murray Cumming  <murrayc@usa.net>

	* bonobo/bonobo-dock-item.c: Corrected "orientation-changed" 
	signal paratemeter types registration.
	
2002-04-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c (label_same):
	do proper label comparisons.
	(str_uscore_equal): kill, not needed now.

2002-04-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_state): set the
	mnemonic (doh).

2002-04-09  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(impl_bonobo_ui_sync_menu_state): don't re-build
	accel labels when we don't need to, freeze / thaw
	the label appropriately.

2002-04-06  Michael Meeks  <michael@ximian.com>

	* tests/test-focus.c (add_control): split out.