@@ -98,8 +98,6 @@ bonobo_widget_construct_control_from_objref (BonoboWidget      *bw,
 	bonobo_control_frame_bind_to_control (
 		bw->priv->frame, control, ev);
 
-	bonobo_control_frame_set_autoactivate (bw->priv->frame, TRUE);
-
 	/* Grab the actual widget which visually contains the remote
 	 * Control.  This is a GtkSocket, in reality. */
 	frame_widget = bonobo_control_frame_get_widget (bw->priv->frame);
